# agent-trader

./: .gitignore  ARCHITECTURE.md  README.md  REFLECTION.md  next-action-items.md  pyproject.toml
agents/: economic-calendar.md  geopolitical-analyst.md  overnight-expert.md  pattern-finder.md  sentiment-monitor.md  twitter-monitor.md  vwap-watcher.md
bridge/: main.py
data/: alerts.db  alerts.db-shm  alerts.db-wal  company_tickers.json  positions.json  registry.json  themes.json  tickers.json  watcher-state.json
docs/: agent-architecture.md  trading-strategies.md  user-personalization.md
docs/agent-specs/: earnings-expert.md  economic-calendar.md  market-open-scalper.md  news-fetcher.md  orchestrator.md  premarket-specialist.md  support-resistance.md  technical-analyst.md
docs/agents-archive/: fundamental-analyst.md  postmarket-summarizer.md  technical-analyst.md  timeframe-analyzer.md
misc/autoresearch-trading/: hermes-research-pattern.md  (+2 more)
openclaw-impl/: PLAN.md  SCRIPT-EXAMPLE-USAGE.md  SCRIPT-EXAMPLES.md  TRADINGVIEW-AUTH.md  WATCHER-SERVICE-SPEC.md  WATCHLIST.md
scripts/: build_ticker_db.py  data_fetcher.py  earnings_expert.py  economic_calendar.py  fundamental_analyst.py  market_open_scalper.py  multi_analyze.py  news_fetcher.py  orchestrator.py  overnight_expert.py  pattern_finder.py  postmarket_summarizer.py  premarket_specialist.py  refresh_tv_token.py  scanner.py  support_resistance.py  technical_analyst.py  timeframe_analyzer.py  vcp_scanner.py  vwap_watcher.py
watcher/: IMPLEMENTATION-PLAN.md  Makefile  SPEC.md  config.json  go.mod  go.sum
(+92 files in other folders)
